Begin to library-ize the tts-basic code

--- a/demo.html
+++ b/demo.html
@@ -2,6 +2,32 @@
 <html>
 <head>
     <script src="tts-basic.js"></script>
+    <script>
+        window.speechSynthesis.onvoiceschanged = () => {
+            const speak = () => {
+                const speaker = tts.createSpeaker({
+                    voice: "Google US English",
+                    lang: "en-US",
+                    volume: 1,
+                    pitch: 1,
+                    rate: 1
+                });
+
+                speaker.speak("Hello! This is text to speech").then(() => {
+                    console.log("The speaker has spoken!");
+                }).catch(() => {
+                    console.log("Sigh...the speaker did not speak :(");
+                });
+            };
+
+            const button = document.getElementById("activate");
+            button.onclick = speak;
+
+            console.log("READY!");
+            console.log(window.speechSynthesis.getVoices());
+            window.speechSynthesis.onvoiceschanged = () => {};
+        }
+    </script>
 </head>
 <body>
     <h1>Voice Test</h1>
