Replace tts-basic with basic-tts
Not sure why I kept using "tts-basic"

--- a/demo.html
+++ b/demo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script src="tts-basic.js"></script>
+    <script src="basic-tts.js"></script>
     <script>
         window.speechSynthesis.onvoiceschanged = () => {
             const speak = () => {
