Add package.json and ESLint

--- a/demo.html
+++ b/demo.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <title>Basic-TTS Demo</title>
     <script src="basic-tts.js"></script>
     <script>
         window.speechSynthesis.onvoiceschanged = () => {
